--- a/frontend/src/pages/urls.astro
+++ b/frontend/src/pages/urls.astro
@@ -5,5 +5,5 @@ import Table from "../components/Table.tsx";
 
 <Layout title="Url Shortener" cardTitle="Create a shortened link" href="/">
   <h2 class="mt-[4vh] text-[1.6rem] text-center">Shortened Links</h2>
-  <Table client:only="react" />
+  <Table client:load />
 </Layout>
